fixed border spacing

--- a/static/style.sass
+++ b/static/style.sass
@@ -119,6 +119,7 @@ svg
         stroke: var(--black)
 
 table
+    border-spacing: 0px
     margin: 10px 0
     width: 100%
     th
